# krypton-security

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  BACKLOG.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  VC.md  deny.toml  eslint.config.mjs  krypton.config.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
**tests**/core/: processIsolation.test.ts  watchdog.test.ts
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql.yml  deploy.yml  quality.yml
scripts/: benchmark-telemetry.cjs  check-design-system.cjs  inspect-release-archive.cjs  release-preflight.cjs
src/core/: processIsolation.cjs  processIsolation.d.cts  watchdog.ts
src/core-native/: Cargo.toml
src/core-native/src/: config.rs  ipc.rs  main.rs  path_policy.rs  process_identity.rs  process_registry.rs  telemetry.rs  watcher.rs
src/dashboard/: ROADMAP.md  VC.md  index.ts  next.config.js  tailwind.config.js  tsconfig.json
src/dashboard/app/: globals.css  index.ts  layout.test.tsx  layout.tsx  page.test.tsx  page.tsx
src/dashboard/components/: index.ts
src/dashboard/components/features/: index.ts
src/dashboard/components/patterns/: index.ts
src/dashboard/components/primitives/: index.ts  structuralBounds.test.ts
src/dashboard/components/ui/: index.ts
src/dashboard/server/telemetry/: constants.ts  index.ts  (+6 more)
src/dashboard/types/: index.ts  nativeControl.ts  telemetry.ts
src/dashboard/utils/: index.ts
tests/core/: processIsolation.test.ts  watchdog.test.ts
tests_simulation/: test_injection.ts
(+80 files in other folders)
