[package]
name = "krypton-core-native"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
nix = { version = "0.31.3", features = ["process", "signal", "socket", "user"] }
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.37.2"
